# rem-custapi-configpage

./: .gitignore  .pre-commit-config.yaml  app.py  azurite.sh  base_columns.json  bootstrap_base_columns.py  bootstrap_customers.py  function_app.py  host.json  pyproject.toml  requirements.txt  run.py  setup.sh  setup_mssql.sh
app/: __init__.py  api.py
app/core/: __init__.py
app/customers/: __init__.py  forms.py  routes.py  services.py
app/customers/static/: form.js  list.js
app/customers/templates/: form.html  list.html
app/manual_run/: __init__.py  routes.py
app/manual_run/static/: run.css  run.js
app/models/: __init__.py  base_column_model.py  customer_model.py  database_handler.py  email_model.py  general_settings_model.py
app/settings/: __init__.py  forms.py  routes.py  services.py
app/settings/static/: index.css  settings.css  settings.js
app/settings/templates/: base_columns_form.html  general_settings_form.html
app/static/css/: flash.css  navbar.css
app/static/js/: flash.js
app/templates/: index.html  navbar.html
migrations/: env.py
migrations/versions/: 2ddb5bd4a7d7_initial_config_schema.py  811bc7bdad71_initial.py
src/admin_page/: __init__.py  cli.py  config.py  extensions.py
src/admin_page/assets/css/: base.css  flash.css  index.css
src/admin_page/assets/js/: flash.js  navbar.js
src/admin_page/blueprints/: __init__.py  api.py
src/admin_page/blueprints/auth/: __init__.py  routes.py
src/admin_page/blueprints/auth/templates/: error.html
src/admin_page/blueprints/core/: __init__.py
src/admin_page/blueprints/customers/: __init__.py  forms.py  routes.py  services.py
src/admin_page/blueprints/customers/static/: form.css  form.js  list.css
src/admin_page/blueprints/manual_run/: __init__.py  routes.py
src/admin_page/blueprints/manual_run/static/: run.js
src/admin_page/blueprints/manual_run/templates/: run.html
src/admin_page/blueprints/settings/: __init__.py  forms.py  routes.py  services.py
src/admin_page/blueprints/settings/static/: base_columns.js  index.css  settings.js
src/admin_page/blueprints/settings/templates/: settings_index.html
src/admin_page/models/: __init__.py  base_column_model.py  customer_model.py  email_model.py  general_settings_model.py
src/admin_page/templates/: base.html  flash.html  index.html  navbar.html
tests/: conftest.py
